<resources>
    <string name="app_name">Calculator</string>
    <string name="Calculation"></string>
    <string name="AC">AC</string>
    <string name="DE">DE</string>
    <string name="Dot">.</string>
    <string name="slash">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>
    <string name="equal">=</string>
    <string name="App_name">CALCULATOR</string>
    <string name="creator">BY ABHIJEET KUMAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>