<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main">


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:paddingStart="0dp"
        android:paddingTop="140dp"
        android:paddingEnd="10dp"
        android:text="@string/Calculation"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAC"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/AC"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickAC"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDE"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/DE"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickDE"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/Dot"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickDot"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSlash"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/slash"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickSlash"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickSeven"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickEight"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickNine"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/multiply"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickMultiply"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickFour"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickFive"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickSix"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/minus"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickMinus"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickOne"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickTwo"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickThree"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/plus"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickPlus"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/zero"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickZero"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnZeroZero"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:text="@string/doubleZero"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ClickDoubleZero"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEqual"
                android:layout_width="177dp"
                android:layout_height="95dp"
                android:text="@string/equal"
                android:textColor="@color/blue"
                android:textSize="35sp"
                android:textStyle="bold"
                android:onClick="ClickEqual"
                android:background="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>